--- a/views/data.hbs
+++ b/views/data.hbs
@@ -67,15 +67,15 @@
 <div class="main-content">
     <div class="header">
         <h1>Data Log</h1>
-        <a href="#" class="btn-filter">Filter</a>
-        <a href="/data" class="btn-clear-filter">Clear filter</a>
+            <a href="/data" class="btn-clear-filter">Clear filter</a>
+             {{#if (eq user.role "Data Manager")}}
+            <div class="export">
+                <button id="exportExcelButton"><i class="bx bxs-spreadsheet"></i>Export Data to Excel Sheet</button>
+            </div>
+            {{/if}}
     </div>
 
-    {{#if (eq user.role "Data Manager")}}
-    <div class="export">
-        <button id="exportExcelButton"><i class="bx bxs-spreadsheet"></i>Export Data to Excel Sheet</button>
-    </div>
-    {{/if}}
+   
     
     <div class="container-for-data">
         <h2 class="headline">Biomedical Records</h2>
@@ -83,6 +83,87 @@
             <table class="data-log">
                 <thead>
                     <tr><b>Total:</b> {{biomedicalCount}}</tr>
+
+                    <!-- Filters for biomedical -->
+                    <div class="div-filter">
+                        <b>From Date:</b>
+                        <input type="date" id="bioFromDateFilter" class="filter-select" name="bioFromDateFilter">
+                        <b>To Date:</b>
+                        <input type="date" id="bioToDateFilter" class="filter-select" name="bioToDateFilter">
+                        <br><br>
+                        <b>Filters:</b>
+                        <select id="bioGenderFilter" class="filter-select" name="bioGenderFilter">
+                            <option value="" selected>Sex at Birth</option>
+                            <option value="Male">Male</option>
+                            <option value="Female">Female</option>
+                            <option value="Transgender">Transgender</option>
+                        </select>
+                        <select id="locationFilter" class="filter-select" name="locationFilter">
+                            <option value="" selected>Location</option>
+                            <option value="Caloocan">Caloocan</option>
+                            <option value="Not in Caloocan">Not in Caloocan</option>
+                        </select>
+                        <select id="ageRangeFilter" class="filter-select" name="ageRangeFilter">
+                            <option value="" selected>Age range</option>
+                            <option value="0 to 18 months">0 to 18 months</option>
+                            <option value="19 months to 9 years">19 months to 9 years</option>
+                            <option value="10 to 14 years">10 to 14 years</option>
+                            <option value="15 to 19 years">15 to 19 years</option>
+                            <option value="20 to 24 years">20 to 24 years</option>
+                            <option value="25 to 29 years">25 to 29 years</option>
+                            <option value="30 to 39 years">30 to 39 years</option>
+                            <option value="40 to 49 years">40 to 49 years</option>
+                            <option value="50-plus">50 years and older</option>
+                        </select>
+                        <select id="testedBeforeFilter" class="filter-select" name="testedBeforeFilter">
+                            <option value="" selected>Tested Before</option>
+                            <option value="Yes">Yes (Has been tested before)</option>
+                            <option value="No">No (First Time Tester)</option>
+                        </select>
+                        <select id="testResultFilter" class="filter-select" name="testResultFilter">
+                            <option value="" selected>Test Result</option>
+                            <option value="Positive">Positive</option>
+                            <option value="Negative">Negative</option>
+                        </select>
+                        <select id="reasonFilter" class="filter-select" name="reasonFilter">
+                            <option value="" selected>Reason</option>
+                            <option value="Unprotected Sex">Unprotected Sex</option>
+                            <option value="Injectable Drugs">Use of injectable drugs</option>
+                            <option value="Pregnancy">Pregnancy</option>
+                            <option value="Exposed-child">HIV-exposed child</option>
+                            <option value="PITC">PITC - III health</option>
+                            <option value="Positive-partner">HIV positive partner</option>
+                            <option value="Rape">Non consensual sex and rape</option>
+                            <option value="Bloodtransfusion">History of blood transfusion or exposure to contaminated equipment</option>
+                            <option value="HCW">Occupational hazard health care worker (HCW)</option>
+                            <option value="Administrative">Administrative reason</option>
+                            <option value="History">Subjective ill health or history of sexually transmitted infection(s)</option>
+                            <option value="No reason">No specific reason disclosed</option>
+                        </select>
+                        <select id="kvpFilter" class="filter-select" name="kvpFilter">
+                            <option value=""selected>Population</option>
+                            <option value="PWID">Person who injects drugs (PWID) or other needle sharing</option>
+                            <option value="MSM">Gay and other Men having Sex with Men (MSM)</option>
+                            <option value="Transgenders">Transgenders</option>
+                            <option value="Sex-worker">Sex/entertainment worker</option>
+                            <option value="Prisoner">Prisoner/detainee</option>
+                            <option value="Migrant">Mobile and migrant populations</option>
+                            <option value="PWUD">Person who uses non-injectable drugs (PWUD)</option>
+                            <option value="Uniformed forces">Uniformed forces (military, police, security)</option>
+                            <option value="Sexual-partners">Sexual Partners of identified KP at higher risk</option>
+                            <option value="AGEW">Adolescent Girls and Young Women (AGEW)</option>
+                            <option value="PWD">Persons with disability</option>
+                            <option value="PLHIV">HIV-negative sexual partners of PLHIV</option>
+                            <option value="Not disclosed">No key or vulnerable population known or not disclosed</option>
+                        </select>
+                        <select id="linkageFilter" class="filter-select" name="linkageFilter">
+                            <option value="" selected>Linkage</option>
+                            <option value="Treatment facility">Linked to Treatment Facility</option>
+                            <option value="Follow-up">Linkage not yet confirmed, under follow-up</option>
+                            <option value="Unconfirmed">Linkage unconfirmed (after 3 months follow-up)</option>
+                        </select>
+                    </div>
+                        
                     <tr>
                         <th>Sex at Birth</th>
                         <th>Location</th>
@@ -139,6 +220,41 @@
             <table class="data-log">
                 <thead>
                     <tr><b>Total:</b> {{nonBiomedicalCount}}</tr>
+
+                    <!-- Filters for nonbiomedical -->
+                    <div class="div-filter">
+                        <b>From Date:</b>
+                        <input type="date" id="nonBioFromDateFilter" class="filter-select" name="nonBioFromDateFilter">
+                        <b>To Date:</b>
+                        <input type="date" id="nonBioToDateFilter" class="filter-select" name="nonBioToDateFilter">
+                        <br><br>
+                        <b>Filters:</b>
+                        <select id="nonBioGenderFilter" class="filter-select" name="nonBioGenderFilter">
+                            <option value="" selected>Sex at Birth</option>
+                            <option value="Male">Male</option>
+                            <option value="Female">Female</option>
+                            <option value"Transgender">Transgender</option>
+                        </select>
+                        <select id="stigmaFilter" class="filter-select" name="stigmaFilter">
+                            <option value="" selected>Stigma</option>
+                            <option value="Public Stigma">Public Stigma</option>
+                            <option value="Family Stigma">Family Stigma</option>
+                            <option value="Self-stigma">Self-stigma</option>
+                        </select>
+                        <select id="discriminationFilter" class="filter-select" name="discriminationFilter">
+                            <option value="" selected>Discrimination</option>
+                            <option value="Verbal Abuse">Verbal Abuse</option>
+                            <option value="Physical Abuse">Physical Abuse</option>
+                            <option value="Emotional Abuse">Emotional Abuse</option>
+                        </select>
+                        <select id="violenceFilter" class="filter-select" name="violenceFilter">
+                            <option value="" selected>Violence</option>
+                            <option value="Economic Abuse">Economic Abuse</option>
+                            <option value="Sexual Abuse">Sexual Abuse</option>
+                            <option value="Hate Crime">Hate Crime</option>
+                        </select>
+                    </div>
+
                     <tr>
                         <th>Sex at Birth</th>
                         <th>Stigma</th>
